charts/template.yaml
---
# Source: eden-ui/charts/edens-frontend/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: RELEASE-NAME-edens-frontend
  labels:
    helm.sh/chart: edens-frontend-0.1.2
    app.kubernetes.io/name: edens-frontend
    app.kubernetes.io/instance: RELEASE-NAME
    app_name: edens-frontend
    app.kubernetes.io/version: "1.0.2"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: edens-frontend
    app.kubernetes.io/instance: RELEASE-NAME
    app_name: edens-frontend
---
# Source: eden-ui/charts/edens-frontend/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: RELEASE-NAME-edens-frontend
  labels:
    helm.sh/chart: edens-frontend-0.1.2
    app.kubernetes.io/name: edens-frontend
    app.kubernetes.io/instance: RELEASE-NAME
    app_name: edens-frontend
    app.kubernetes.io/version: "1.0.2"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: edens-frontend
      app.kubernetes.io/instance: RELEASE-NAME
      app_name: edens-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: edens-frontend
        app.kubernetes.io/instance: RELEASE-NAME
        app_name: edens-frontend
    spec:
      serviceAccountName: application-sa
      securityContext:
        {}
      volumes:
        - name: tmp
          hostPath:
            path: /tmp/tomcat
        - name: config
          configMap:
            name: "RELEASE-NAME-edens-frontend-mount"
            # An array of keys from the ConfigMap to create as files
            items:
            - key: logback.xml
              path: logback.xml      
      containers:
        - name: edens-frontend
          securityContext:
            {}
          image: "858112783435.dkr.ecr.eu-west-2.amazonaws.com/fineract-ui-edens:edenscapital-dev"
          imagePullPolicy: Always
          volumeMounts:
          - name: tmp
            mountPath: /data/tomcat
          - name: config
            mountPath: /app/resources/logback.xml
            subPath: logback.xml
            readOnly: true
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 512m
              memory: 1024Mi
            requests:
              cpu: 512m
              memory: 512Mi
---
# Source: eden-ui/charts/edens-frontend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: RELEASE-NAME-edens-frontend
  labels:
    helm.sh/chart: edens-frontend-0.1.2
    app.kubernetes.io/name: edens-frontend
    app.kubernetes.io/instance: RELEASE-NAME
    app_name: edens-frontend
    app.kubernetes.io/version: "1.0.2"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-issuer
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - "mifos.edens360.com"
      secretName: fineract-tls
  rules:
    - host: "mifos.edens360.com"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              serviceName: RELEASE-NAME-edens-frontend
              servicePort: 80
